--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@calcom/embed-react": "^1.4.0",
     "@clerk/clerk-expo": "^0.18.12",
     "@expo/vector-icons": "13.0.0",
     "@react-navigation/bottom-tabs": "6.5.8",
@@ -27,12 +28,13 @@
     "expo-linking": "5.0.2",
     "expo-random": "13.2.0",
     "expo-secure-store": "12.3.1",
-    "expo-splash-screen": "0.20.4",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "1.6.0",
     "expo-web-browser": "12.3.2",
+    "firebase": "^10.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.1",
+    "react-native": "0.72.10",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "3.22.1",
     "react-native-url-polyfill": "1.3.0",
