--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.10",
+    "react-native-calendar-strip": "^2.2.6",
+    "react-native-calendars": "^1.1304.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "3.22.1",
     "react-native-url-polyfill": "1.3.0",
