--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@calcom/embed-react": "^1.4.0",
     "@clerk/clerk-expo": "^0.18.12",
     "@expo/vector-icons": "13.0.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "6.5.8",
     "@react-navigation/native": "6.1.7",
     "@react-navigation/native-stack": "6.9.13",
