--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@clerk/clerk-expo": "^0.18.12",
     "@expo/vector-icons": "13.0.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-navigation/bottom-tabs": "6.5.8",
     "@react-navigation/native": "6.1.7",
     "@react-navigation/native-stack": "6.9.13",
@@ -39,6 +40,7 @@
     "react-native": "0.72.10",
     "react-native-calendar-strip": "^2.2.6",
     "react-native-calendars": "^1.1304.1",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "3.22.1",
     "react-native-url-polyfill": "1.3.0",
