--- a/package.json
+++ b/package.json
@@ -15,37 +15,42 @@
   "dependencies": {
     "@calcom/embed-react": "^1.4.0",
     "@clerk/clerk-expo": "^0.18.12",
-    "@expo/vector-icons": "13.0.0",
+    "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-navigation/bottom-tabs": "6.5.8",
     "@react-navigation/native": "6.1.7",
     "@react-navigation/native-stack": "6.9.13",
     "@types/expo": "33.0.1",
     "axios": "^1.6.8",
-    "expo": "~49.0.0",
-    "expo-asset": "8.10.1",
-    "expo-auth-session": "5.0.2",
-    "expo-constants": "14.4.2",
-    "expo-font": "11.4.0",
-    "expo-linking": "5.0.2",
-    "expo-random": "13.2.0",
-    "expo-secure-store": "12.3.1",
-    "expo-splash-screen": "~0.20.5",
-    "expo-status-bar": "1.6.0",
-    "expo-web-browser": "12.3.2",
+    "expo": "^51.0.32",
+    "expo-asset": "~10.0.10",
+    "expo-auth-session": "~5.5.2",
+    "expo-constants": "~16.0.2",
+    "expo-font": "~12.0.10",
+    "expo-linking": "~6.3.1",
+    "expo-random": "~14.0.1",
+    "expo-secure-store": "~13.0.2",
+    "expo-splash-screen": "~0.27.5",
+    "expo-status-bar": "~1.12.1",
+    "expo-web-browser": "~13.0.3",
     "firebase": "^10.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.10",
+    "react-native": "0.74.5",
     "react-native-calendar-strip": "^2.2.6",
     "react-native-calendars": "^1.1304.1",
     "react-native-phone-number-input": "^2.1.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "3.22.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
     "react-native-url-polyfill": "1.3.0",
-    "react-native-web": "0.19.6",
-    "uri-scheme": "1.1.0"
+    "react-native-web": "~0.19.10",
+    "uri-scheme": "1.1.0",
+    "expo-updates": "~0.25.24",
+    "@babel/core": "^7.24.0",
+    "@types/react": "~18.2.79",
+    "jest-expo": "~51.0.4",
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.22.8",
